Fixed Multiple Connection issue
Added:
- Dynamic and Dictionary getting
- Dynamic and Dictionary list inserts
- Fixed issue with connecting to multiple cassandra instances
- Added column name lookup to row

--- a/Cassandra.Data/Cassandra.Data.csproj
+++ b/Cassandra.Data/Cassandra.Data.csproj
@@ -39,6 +39,7 @@
     </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
